--- a/entitywidget.ui
+++ b/entitywidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>50</width>
-    <height>50</height>
+    <height>75</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -27,11 +27,42 @@
     <number>0</number>
    </property>
    <item>
+    <widget class="QLabel" name="name_lbl">
+     <property name="text">
+      <string>TextLabel</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <widget class="QPushButton" name="pushButton">
      <property name="text">
       <string/>
      </property>
     </widget>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QLabel" name="atk_lbl">
+       <property name="text">
+        <string>1</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="hp_lbl">
+       <property name="text">
+        <string>1</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
   </layout>
  </widget>
