--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -49,13 +49,34 @@
        <number>120</number>
       </property>
       <item>
-       <widget class="EntityWidget" name="enemy_hero_widget" native="true"/>
+       <widget class="EntityWidget" name="enemy_hero_widget" native="true">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>75</height>
+         </size>
+        </property>
+       </widget>
       </item>
       <item>
-       <widget class="EntityWidget" name="game_widget" native="true"/>
+       <widget class="EntityWidget" name="game_widget" native="true">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>75</height>
+         </size>
+        </property>
+       </widget>
       </item>
       <item>
-       <widget class="EntityWidget" name="ally_hero_widget" native="true"/>
+       <widget class="EntityWidget" name="ally_hero_widget" native="true">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>75</height>
+         </size>
+        </property>
+       </widget>
       </item>
      </layout>
     </item>
